--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -7,7 +7,7 @@
         x:Class="RelinkModOrganizer.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="GBFR Mod Organizer"
+        Title="Relink Mod Organizer"
         Width="1280"
         Height="720"
         TransparencyLevelHint="AcrylicBlur"
